[tool.poetry]
name = "wagtail-checkout"
version = "0.1.0"
description = ""
authors = ["Nick Moreton <nickmoreton@me.com>"]

[tool.poetry.dependencies]
python = "^3.10"
wagtail = "^4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
